--- a/sub.html
+++ b/sub.html
@@ -25,6 +25,7 @@
             <button class="config_btn" id="config_btn">Configuration</button>
             <div class="config_container" id="config_container">
                 <form class="form" id="ConfigForm">
+                    URL &nbsp<input type="text" class="container" id="URL" value="192.168.56.101" /><br /><br />
                     PlmnID &nbsp<input type="text" class="container" id="PlmnID" value="20893" /><br />
                     <!-- ueId &nbsp<input type="text" class="container" id="ueId" value="imsi-208930000000000" /><br /> -->
                     authenticationMethod &nbsp<input type="text" class="container" id="authenticationMethod" value="5G_AKA" /><br />
